# embree

./: .bazelrc  .ci-env.yaml  .deactivated-gitlab-ci.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BUILD.bazel  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.3.3-pre1  CMakePresets.json  CMakeUserPresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  CTestConfig.backup  CTestConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  README.txt  SECURITY.md  WORKSPACE.bazel  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h  embree-config-default.cmake  embree-config-version.cmake  embree-config.cmake  embree.sln  embree2.sln  embree_icc.sln  embree_ispc.sln  embree_vs2008.sln  (+16 more)
common/algorithms/: CMakeLists.txt  parallel_any_of.h  parallel_filter.cpp  parallel_filter.h  parallel_for.cpp  parallel_for.h  parallel_for_for.cpp  parallel_for_for.h  parallel_for_for_prefix_sum.cpp  parallel_for_for_prefix_sum.h  parallel_map.cpp  parallel_map.h  parallel_partition.cpp  parallel_partition.h  parallel_prefix_sum.cpp  parallel_prefix_sum.h  parallel_reduce.cpp  parallel_reduce.h  parallel_set.cpp  parallel_set.h  parallel_sort.cpp  parallel_sort.h
common/lexers/: CMakeLists.txt  parsestream.h  stream.h  streamfilters.h  stringstream.cpp  stringstream.h  tokenstream.cpp  tokenstream.h
common/math/: CMakeLists.txt  affinespace.h  bbox.h  col3.h  col4.h  color.h  constants.cpp  constants.h  emath.h  interval.h  lbbox.h  linearspace2.h  linearspace3.h  math.h  math_sycl.h  naabbox.h  obbox.h  quaternion.h  range.h  transcendental.h  vec2.h  vec2fa.h  vec3.h  vec3ba.h  vec3ba_mic.h  vec3ba_sycl.h  vec3fa.h  vec3fa_mic.h  vec3fa_sycl.h  vec3ia.h  vec3ia_mic.h  vec3ia_sycl.h  vec4.h
common/simd/: CMakeLists.txt  avx.h  avx512.h  avxb.h  avxf.h  avxi.h  avxi_emu.h  bool16_avx512.cpp  bool4_sse2.h  bool8.h  bool8_avx.h  float16_avx512.h  float4_sse2.h  float8_avx.h  int16_avx512.cpp  int16_avx512.h  int4_sse2.h  int8_avx.h  int8_avx2.h  mic.h  mic_f.cpp  mic_f.h  mic_i.cpp  mic_i.h  mic_m.cpp  mic_m.h  simd.h  smmintrin_emu.h  sse.cpp  sse.h  sse_mic.h  sse_special.h  sseb.h  sseb_mic.h  ssef.h  ssef_mic.h  ssei.h  ssei_mic.h  sycl.h  varying.h  (+32 more)
common/sys/: CMakeLists.txt  alloc.cpp  alloc.h  array.h  atomic.h  barrier.cpp  barrier.h  condition.cpp  condition.h  config.h.in  constants.h  event.h  filename.cpp  filename.h  intrinsics.h  library.cpp  library.h  logging.h  mutex.cpp  mutex.h  network.cpp  network.h  platform.cpp  platform.h  ref.h  regression.cpp  regression.h  string.cpp  string.h  sycl.h  sys.icproj  sys.vcproj  sys.vcxproj  sysinfo.cpp  sysinfo.h  sysinfo_skx.cpp  sysinfo_skx.h  tasklogger.cpp  tasklogger.h  taskscheduler.cpp  (+9 more)
common/tasking/: CMakeLists.txt  taskscheduler.cpp  taskscheduler.h  taskscheduler_mic.cpp  taskscheduler_mic.h  taskscheduler_new.cpp  taskscheduler_new.h  taskscheduler_sys.cpp  taskscheduler_sys.h  taskscheduler_tbb.cpp  taskscheduler_tbb.h  taskschedulerhpx.cpp  taskschedulerhpx.h  taskschedulerinternal.cpp  taskschedulerinternal.h  taskschedulerppl.cpp  taskschedulerppl.h  taskschedulertbb.cpp  taskschedulertbb.h  tasksys.cpp  tasksys_mic.cpp
doc/: CMakeLists.txt  Makefile  html2ps.conf  html2textrc  preamble.tex  release.txt
doc/dox/: api.dox  building.dox  download.dox  doxygen_config  embree_api.dox  mainpage.dox  sample_path_tracer.dox  tutorials.dox
doc/images/: half_edges.fig  quad_uv.fig  triangle_uv.fig
doc/src/: IncludeFilter.py  acknowledgement.md  apache.txt  api-ref.md  api.html  api.md  changelog.md  compilation.html  compilation.md  downloading.html  downloading.md  frame.html  images_local.md  images_url.md  install.html  install.md  intro.md  legal.md  links_local.md  links_web.md  metadata.md  new_features.html  overview.html  overview.md  papers.html  platforms.html  platforms.md  projects.md  readme.html  readme.tex  readme.txt  readme_bin.html  renderer.html  renderer.md  resources.html  spec.md  support.html  support.md  tutorials.html  tutorials.md  (+1 more)
doc/www/: api.html  downloads.html  index.html  renderer.html  tutorials.html
kernels/level_zero/: CMakeLists.txt  ze_rtas.h  ze_wrapper.cpp  ze_wrapper.h
kernels/rthwif/: CMakeLists.txt  package_ze_raytracing.cmake  rthwif_builder.cpp  rthwif_builder.h  rthwif_builder_spec.h  rthwif_embree.cpp  rthwif_embree.h  rthwif_embree_builder.cpp  rthwif_embree_builder.h  rthwif_embree_builder_ploc.cpp  rthwif_embree_builder_ploc.h  rthwif_embree_builder_stoch.cpp  rthwif_embree_builder_stoch.h  rthwif_internal.h  rthwif_production.cpp  rthwif_production.h  rthwif_production_igc.h
kernels/xeon/: CMakeLists.txt  embree.def  embree.icproj  embree.rc  embree.vcproj  embree.vcxproj  embree_avx.def  embree_avx.icproj  embree_avx.vcproj  embree_avx.vcxproj  embree_avx2.def  embree_avx2.icproj  embree_avx2.vcproj  embree_avx2.vcxproj  embree_sse2.def  embree_sse4.def  resource.h
kernels/xeonphi/: CMakeLists.txt
python/: CMakeLists.txt  CMakePresets.json  README.md  __init__.py  setup.py
python/src/: CMakeLists.txt  bindings.cpp  intersect_callback_guard.cpp  intersect_callback_guard.h  pack_pip.cmake  pyembree.cpp  pyembree.h  rtcore_buffer.cpp  rtcore_builder.cpp  rtcore_common.cpp  rtcore_device.cpp  rtcore_geometry.cpp  rtcore_quaternion.cpp  rtcore_ray.cpp  rtcore_scene.cpp
python/tutorials/: common.py  geom_intersection_filter.py  intersection_filter.ipynb  intersection_filter.py  intersectn.ipynb  test.py  (+9 more)
superbuild/: CMakeLists.txt
tests/: CMakeLists.txt  benchmark.cpp  benchmark.icproj  benchmark.vcproj  benchmark.vcxproj  benchmark_tasking.cpp  benchmark_tasking.plot  retrace.cpp  rtcore_helpers.h  testall.sh  verify.cpp  verify.h  verify.icproj  verify.vcproj  verify.vcxproj  verify2.cpp  verify2.h
tutorials/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  README.md.in  cmake_install.cmake  ispc2cpp.sh  ispc2sycl.sh  osp2emb.sh
(+3508 files in other folders)
